--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "gatsby-plugin-sharp": "^3.1.1",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
+    "graphql": "^15.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.16"
   },
   "devDependencies": {
     "prettier": "2.2.1"
